<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragments.MenuFragment"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:weightSum="1">

        <Space style="@style/espacio"/>

        <Button
            android:id="@+id/boton1"
            style="@style/botones"
            android:layout_width="wrap_content"
            android:text="@string/alta" />

        <Space style="@style/espacio"/>

        <Button
            android:id="@+id/boton2"
            style="@style/botones"
            android:layout_width="wrap_content"
            android:text="@string/historico" />

        <Space style="@style/espacio"/>

        <Button
            android:id="@+id/boton3"
            style="@style/botones"
            android:layout_width="wrap_content"
            android:text="@string/perfil" />

        <Space style="@style/espacio"/>

    </LinearLayout>

</FrameLayout>